<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/Theme.Covid19Tracker"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/design_default_color_on_primary"        android:minHeight="?attr/actionBarSize"
        android:id="@+id/symptoms_toolbar"
        app:title="@string/symptoms">
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_LightsymptomsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/symptoms_light_title"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/text_symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="26dp"
        android:textSize="16sp"
        android:text="@string/symptoms_list_light"
        android:layout_below="@+id/text_LightsymptomsTitle" />

    <TextView
        android:id="@+id/text_symptomsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/symptoms_heavy_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_symptoms"
        />

    <TextView
        android:id="@+id/text_Severesymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="26dp"
        android:textSize="16sp"
        android:text="@string/symptoms_list_heavy"
        android:layout_below="@+id/text_symptomsTitle" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_gravity="bottom"
        app:menu="@menu/navigation_menu"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/text_symptoms"
        />
</FrameLayout>